# project_IA

./: .gitignore  1st_test.ipynb  Drug_classifier_project.ipynb  EDA.ipynb  README.md  complete_training_pipeline.ipynb  pyproject.toml  run_training.sh  run_training_test.sh  training_pipeline.py
.claude/: settings.local.json
JordiiQueralto/: aziz.py  exploration.ipynb  jordi.py
logs/: rev_40431408_0.err  rev_40431408_0.out  rev_40431408_1.err  rev_40431408_1.out  rev_40431408_2.err  rev_40431408_2.out  rev_40431408_3.err  rev_40431408_3.out  rev_40437049.err
models/: results.ipynb
models/Bio_ClinicalBERT/: batch_losses.csv  classification_report.txt  config.json  epoch_metrics.csv
models/roberta-base/: batch_losses.csv  classification_report.txt  config.json  epoch_metrics.csv
models/sentiment-roberta-large-english/: batch_losses.csv  classification_report.txt  config.json  epoch_metrics.csv
