[project]
name = "projectia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "ipykernel>=7.2.0",
    "pandas>=3.0.3",
    "pathlib>=1.0.1",
    "scikit-learn>=1.8.0",
    "tiktoken>=0.12.0",
    "torch==2.6.0",
    "transformers>=5.8.0",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
